--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "license": "ISC",
   "dependencies": {
     "body-parser": "^1.15.2",
+    "dotenv": "^5.0.1",
     "express": "^4.14.0",
     "express-query-int": "^1.0.1",
     "lodash": "^4.17.4",
