chore: moving db url to dotenv file

--- a/.env
+++ b/.env
@@ -1,2 +1,3 @@
-DB_USER=
-DB_PASS=
+DB_USER=<username>
+DB_PASS=<password>
+DB_URL=mongodb://<username>:<password>@ds155288.mlab.com:55288/mymoneyapp
